@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.41
-releasedate		20041112
+releasedate		20041114
 
 ##############################################################################
 # host dependent configuration
@@ -100,7 +100,7 @@ allowed_rootloginip	none
 case_insensitive_login	no
 forced_ssl_login	no
 stay_ssl_afterlogin	yes
-enable_domainselectmenu yes
+enable_domainselectmenu no
 domainselmenu_list	auto
 enable_strictvirtuser	no
 enable_changepwd	yes
